Fixed navbar-collapse toggler and changed url area of places

--- a/src/main/static/css/main.css
+++ b/src/main/static/css/main.css
@@ -103,10 +103,10 @@ body, html {
     text-shadow: 0px 0px 2px rgb(12, 161, 45);
 }*/
 
-#navbarResponsive {
+/* #navbarResponsive {
 	display: flex;
 	height: 100%;
-}
+} */
 
 .nav-link {
 /*padding: 10px 30px; */
